Gif animation added to workshop

--- a/presentation/slides.slides.html
+++ b/presentation/slides.slides.html
@@ -7452,16 +7452,16 @@ main {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>$~$</p>
-<ul>
+<ol>
 <li>Purpose of the simulation platform</li>
 <li>The physics of Rydberg atoms</li>
 <li>From laser pulses to quantum gates</li>
 <li>Example: Quantum State Teleportation protocol</li>
-</ul>
+</ol>
 </div>
 </div>
 </div>
-</div>
+</div><aside class="notes">
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -7472,7 +7472,8 @@ main {
 </div>
 </div>
 </div>
-</div></div></section></section><section><section>
+</div>
+</aside></div></section></section><section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
